--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 
+github.client.id = 61c27b7206dcbae3865a
+github.client.secret = a2be991b8a3e290cc64cd31fff7d9c07848c8cfe
+github.redirect.uri = http://localhost:8080/callback
